--- a/htlm/sales.html
+++ b/htlm/sales.html
@@ -7,13 +7,16 @@
     <header>
 
     </header>
-    <main>
 
+    <main>
+<div id="parent">
+
+</div>
     </main>
 
     <footer>
 
     </footer>
-    <script src="java/app.js"></script>
+    <script src="../java/app.js"></script>
 </body>
 </html>
