--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <footer>
 
     </footer>
-    <script src="java/app.js"></script>
+    <script src="../cookie-stand/java/app2.js"></script>
 </body>
 </html>
