finish constructor obj

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Document</title>
 </head>
+
 <body>
     <header>
 
@@ -14,6 +16,7 @@
     <footer>
 
     </footer>
-    <script src="../cookie-stand/java/app2.js"></script>
+    <script src="../cookie-stand/java/app.js"></script>
 </body>
+
 </html>
