finish lab 07 table

--- a/htlm/sales.html
+++ b/htlm/sales.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Document</title>
 </head>
+
 <body>
     <header>
 
     </header>
 
     <main>
-<div id="parent">
+        <div id="parent">
 
-</div>
+        </div>
     </main>
 
     <footer>
 
     </footer>
-    <script src="../java/app.js"></script>
+    <script src="../java/app2.js"></script>
 </body>
+
 </html>
