--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <footer>
 
     </footer>
-    <script src="../cookie-stand/java/app.js"></script>
+    <!--  <script src="./java/app.js"></script>-->
 </body>
 
 </html>
