try to add click for lab 9

--- a/htlm/sales.html
+++ b/htlm/sales.html
@@ -3,15 +3,18 @@
 
 <head>
     <title>Document</title>
+    <link rel="reset" href="css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
-<body>
+<body id="parent">
     <header>
 
     </header>
 
     <main>
         <div id="parent"> </div>
+        <button id="buttun1">Click here </button>
     </main>
 
     <footer>
