--- a/htlm/sales.html
+++ b/htlm/sales.html
@@ -5,6 +5,8 @@
     <title>Document</title>
     <link rel="reset" href="css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
 </head>
 
 <body>
