add css for table page

--- a/htlm/sales.html
+++ b/htlm/sales.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-
+        <h1>
+            Salmoon Cookies</h1>
+        <h3>you can put new shop, will apear in the table, have a good experince</h3>
     </header>
 
     <main id="parent">
