add css for home

--- a/index.html
+++ b/index.html
@@ -2,27 +2,35 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Salmoon Cookies</title>
+    <link rel="reset" href="../cookie-stand/css/reset.css">
+    <link rel="stylesheet" href="/css/styleHome.css">
 </head>
 
 <body>
+
     <header>
+        <h1>
+            Salmoon Cookies
+        </h1>
         <img id="familyImg" src="img/family.jpg" alt="family">
+
+
         <nav>
             <ul>
                 <li>
-                    <a href="htlm/sales.html">next page </a>
+                    <a id="linkToNext" href="htlm/sales.html ">Go to the next page </a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <img src="img/chinook.jpg" alt="chinook">
-        <img src="img/cutter.jpeg" alt="cutter">
-        <img src="img/fish.jpg" alt="fish">
-        <img src="img/frosted-cookie.jpg" alt="frosted cookie">
-        <img src="img/shirt.jpg" alt="shirt">
-        <img src="img/salmon.png" alt="salmon">
+        <img id="salmon" src="img/salmon.png " alt="salmon ">
+        <img class="imgs" src="img/chinook.jpg " alt="chinook ">
+        <img class="imgs" src="img/cutter.jpeg " alt="cutter ">
+        <img class="imgs" src="img/fish.jpg " alt="fish ">
+        <img class="imgs" src="img/frosted-cookie.jpg " alt="frosted cookie ">
+
     </main>
 
     <footer>
@@ -33,11 +41,11 @@
         <p>
             working hour <time>7:00am</time> to <time>4:00pm</time> every day
         </p>
-        <a href="mmm@gmail.com"> contact us</a>
+        <a href="mmm@gmail.com "> contact us</a>
 
 
     </footer>
-    <!--  <script src="./java/app.js"></script>-->
+    <!--  <script src="./java/app.js "></script>-->
 </body>
 
 </html>
