--- a/htlm/sales.html
+++ b/htlm/sales.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Salmoon Cookies</title>
     <link rel="reset" href="css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
