--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Salmoon Cookies</title>
     <link rel="reset" href="../cookie-stand/css/reset.css">
-    <link rel="stylesheet" href="/css/styleHome.css">
+    <link rel="stylesheet" href="css/styleHome.css">
 </head>
 
 <body>
